# GPUris

./: CMakeLists.txt
libs/vma/: vk_mem_alloc.h
src/: main.cpp
src/io/: file.cpp  file.h
src/renderer/: renderer.cpp  renderer.h
src/renderer/rhi/: rhi.h  vulkan-rhi.cpp  vulkan-rhi.h
